test-expected/large/foostudiov/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    foo.com/duname: foostudiov
    foo.com/duversion: 5.2.177-20190925.1569390411032
    foo.com/version: 5.2.177
  labels:
    app.kubernetes.io/name: foostudiov
    helm.sh/chart: foostudiov-5.2.177
  name: foostudiov
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: foostudiov
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: foostudiov
        app.kubernetes.io/name: foostudiov
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: foo-shared-config
        - configMapRef:
            name: foo-java-config
        image: repo.foo.com/va-125.0.0-x64_redhat_linux_7-docker-prod/foo-studiov:5.2.177-20190925.1569390411032
        imagePullPolicy: IfNotPresent
        name: foostudiov
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources: {}
