test-expected/large/foostudiov/VirtualService.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    foo.com/duname: foostudiov
    foo.com/duversion: 5.2.177-20190925.1569390411032
    foo.com/version: 5.2.177
  labels:
    app.kubernetes.io/name: foostudiov
    helm.sh/chart: foostudiov-5.2.177
  name: foostudiov
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /FOOStudioV
    - uri:
        prefix: /FOOStudioV/
    route:
    - destination:
        host: foostudiov.peekay.svc.cluster.local
